--- a/TP_MlOps_mlflow.ipynb
+++ b/TP_MlOps_mlflow.ipynb
@@ -1098,8 +1098,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### modèle pour faire le versionning comme demandé"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1110,16 +1117,16 @@
       "  warnings.warn(\n",
       "c:\\Users\\alban\\OneDrive\\Documents\\MLolp\\projet-main\\.venv\\Lib\\site-packages\\mlflow\\types\\utils.py:407: UserWarning: Hint: Inferred schema contains integer column(s). Integer columns in Python cannot represent missing values. If your input data contains missing values at inference time, it will be encoded as floats and will cause a schema enforcement error. The best way to avoid this problem is to infer the model schema based on a realistic data sample (training dataset) that includes missing values. Alternatively, you can declare integer columns as doubles (float64) whenever these columns may have missing values. See `Handling Integers With Missing Values <https://www.mlflow.org/docs/latest/models.html#handling-integers-with-missing-values>`_ for more details.\n",
       "  warnings.warn(\n",
-      "2024/09/08 11:35:45 INFO mlflow.tracking._tracking_service.client: 🏃 View run random_forest_run_100_6 at: http://127.0.0.1:5000/#/experiments/276980095504201702/runs/743cc1787eaa4426842b586aa102bfac.\n",
-      "2024/09/08 11:35:45 INFO mlflow.tracking._tracking_service.client: 🧪 View experiment at: http://127.0.0.1:5000/#/experiments/276980095504201702.\n"
+      "2024/09/08 11:41:35 INFO mlflow.tracking._tracking_service.client: 🏃 View run random_forest_run_100_5 at: http://127.0.0.1:5000/#/experiments/276980095504201702/runs/5a8973b247484af595035f94c1da3908.\n",
+      "2024/09/08 11:41:35 INFO mlflow.tracking._tracking_service.client: 🧪 View experiment at: http://127.0.0.1:5000/#/experiments/276980095504201702.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Run completed with parameters: {'n_estimators': 100, 'max_depth': 6, 'min_samples_split': 10, 'min_samples_leaf': 4, 'bootstrap': True, 'oob_score': True, 'random_state': 888, 'class_weight': 'balanced'}\n",
-      "Accuracy: 0.9915, F1-Score: 0.9759, Precision: 0.9636, Recall: 0.9885\n"
+      "Run completed with parameters: {'n_estimators': 100, 'max_depth': 5, 'min_samples_split': 20, 'min_samples_leaf': 10, 'bootstrap': True, 'oob_score': True, 'random_state': 888, 'class_weight': 'balanced'}\n",
+      "Accuracy: 0.9825, F1-Score: 0.9517, Precision: 0.9151, Recall: 0.9914\n"
      ]
     }
    ],
@@ -1145,9 +1152,9 @@
     "# Définir un ensemble de paramètres pour le modèle RandomForestClassifier\n",
     "params = {\n",
     "    \"n_estimators\": 100,\n",
-    "    \"max_depth\": 6,\n",
-    "    \"min_samples_split\": 10,\n",
-    "    \"min_samples_leaf\": 4,\n",
+    "    \"max_depth\": 5,\n",
+    "    \"min_samples_split\": 20,\n",
+    "    \"min_samples_leaf\": 10,\n",
     "    \"bootstrap\": True,\n",
     "    \"oob_score\": True,\n",
     "    \"random_state\": 888,\n",
