--- a/TP_MlOps_mlflow.ipynb
+++ b/TP_MlOps_mlflow.ipynb
@@ -1197,10 +1197,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\alban\\OneDrive\\Documents\\MLolp\\projet-main\\.venv\\Lib\\site-packages\\mlflow\\types\\utils.py:407: UserWarning: Hint: Inferred schema contains integer column(s). Integer columns in Python cannot represent missing values. If your input data contains missing values at inference time, it will be encoded as floats and will cause a schema enforcement error. The best way to avoid this problem is to infer the model schema based on a realistic data sample (training dataset) that includes missing values. Alternatively, you can declare integer columns as doubles (float64) whenever these columns may have missing values. See `Handling Integers With Missing Values <https://www.mlflow.org/docs/latest/models.html#handling-integers-with-missing-values>`_ for more details.\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\alban\\OneDrive\\Documents\\MLolp\\projet-main\\.venv\\Lib\\site-packages\\mlflow\\types\\utils.py:407: UserWarning: Hint: Inferred schema contains integer column(s). Integer columns in Python cannot represent missing values. If your input data contains missing values at inference time, it will be encoded as floats and will cause a schema enforcement error. The best way to avoid this problem is to infer the model schema based on a realistic data sample (training dataset) that includes missing values. Alternatively, you can declare integer columns as doubles (float64) whenever these columns may have missing values. See `Handling Integers With Missing Values <https://www.mlflow.org/docs/latest/models.html#handling-integers-with-missing-values>`_ for more details.\n",
+      "  warnings.warn(\n",
+      "2024/09/08 11:43:44 INFO mlflow.tracking._tracking_service.client: 🏃 View run logistic_regression_run_1.0 at: http://127.0.0.1:5000/#/experiments/286315274138648484/runs/133483d3214746fbb16a0d31f8f85a7e.\n",
+      "2024/09/08 11:43:44 INFO mlflow.tracking._tracking_service.client: 🧪 View experiment at: http://127.0.0.1:5000/#/experiments/286315274138648484.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Run completed with parameters: {'C': 1.0, 'solver': 'liblinear', 'random_state': 42, 'class_weight': 'balanced'}\n",
+      "Accuracy: 0.9790, F1-Score: 0.9420, Precision: 0.9069, Recall: 0.9799\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import mlflow\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import accuracy_score, f1_score, precision_score, recall_score\n",
+    "import pickle\n",
+    "\n",
+    "# Diviser les données en caractéristiques (X) et cible (y)\n",
+    "X = data.drop(columns=[\"customer_id\", \"default\"])  # Enlever les colonnes 'customer_id' et 'default'\n",
+    "y = data[\"default\"]\n",
+    "\n",
+    "# Diviser les données en ensembles d'entraînement et de validation\n",
+    "X_train, X_val, y_train, y_val = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Définir une nouvelle expérience pour le modèle de Régression Logistique\n",
+    "mlflow.set_experiment(\"LogisticRegression_Models\")\n",
+    "\n",
+    "# Définir un ensemble de paramètres pour le modèle LogisticRegression\n",
+    "params = {\n",
+    "    \"C\": 1.0,\n",
+    "    \"solver\": 'liblinear',\n",
+    "    \"random_state\": 42,\n",
+    "    \"class_weight\": 'balanced'\n",
+    "}\n",
+    "\n",
+    "# Démarrer un run dans MLflow\n",
+    "with mlflow.start_run(run_name=f\"logistic_regression_run_{params['C']}\"):\n",
+    "    # Entraîner le modèle LogisticRegression avec les paramètres actuels\n",
+    "    lr = LogisticRegression(**params)\n",
+    "    lr.fit(X_train, y_train)\n",
+    "\n",
+    "    # Prédire sur l'ensemble de validation\n",
+    "    y_pred = lr.predict(X_val)\n",
+    "\n",
+    "    # Calculer les métriques de classification\n",
+    "    accuracy = accuracy_score(y_val, y_pred)\n",
+    "    f1 = f1_score(y_val, y_pred)\n",
+    "    precision = precision_score(y_val, y_pred)\n",
+    "    recall = recall_score(y_val, y_pred)\n",
+    "\n",
+    "    # Assembler les métriques dans une collection pour les enregistrer\n",
+    "    metrics = {\"accuracy\": accuracy, \"f1_score\": f1, \"precision\": precision, \"recall\": recall}\n",
+    "\n",
+    "    # Enregistrer les paramètres et les métriques dans MLflow\n",
+    "    mlflow.log_params(params)\n",
+    "    mlflow.log_metrics(metrics)\n",
+    "\n",
+    "    # Enregistrer une instance du modèle entraîné pour une utilisation ultérieure dans MLflow\n",
+    "    mlflow.sklearn.log_model(\n",
+    "        sk_model=lr, input_example=X_val, artifact_path=\"logistic_regression_model\"\n",
+    "    )\n",
+    "\n",
+    "    # Afficher le rapport de classification\n",
+    "    print(f\"Run completed with parameters: {params}\")\n",
+    "    print(f\"Accuracy: {accuracy:.4f}, F1-Score: {f1:.4f}, Precision: {precision:.4f}, Recall: {recall:.4f}\")\n",
+    "\n",
+    "# Enregistrer le modèle au format pickle\n",
+    "with open(\"logistic_regression_model.pkl\", \"wb\") as f:\n",
+    "    pickle.dump(lr, f)\n"
+   ]
   }
  ],
  "metadata": {
