--- a/TP_MlOps_mlflow.ipynb
+++ b/TP_MlOps_mlflow.ipynb
@@ -901,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -912,8 +912,8 @@
       "  warnings.warn(\n",
       "c:\\Users\\alban\\OneDrive\\Documents\\MLolp\\projet-main\\.venv\\Lib\\site-packages\\mlflow\\types\\utils.py:407: UserWarning: Hint: Inferred schema contains integer column(s). Integer columns in Python cannot represent missing values. If your input data contains missing values at inference time, it will be encoded as floats and will cause a schema enforcement error. The best way to avoid this problem is to infer the model schema based on a realistic data sample (training dataset) that includes missing values. Alternatively, you can declare integer columns as doubles (float64) whenever these columns may have missing values. See `Handling Integers With Missing Values <https://www.mlflow.org/docs/latest/models.html#handling-integers-with-missing-values>`_ for more details.\n",
       "  warnings.warn(\n",
-      "2024/09/08 11:27:31 INFO mlflow.tracking._tracking_service.client: 🏃 View run random_forest_run_50_4 at: http://127.0.0.1:5000/#/experiments/276980095504201702/runs/6a5414f281fa4e58853633ab80b04bb7.\n",
-      "2024/09/08 11:27:31 INFO mlflow.tracking._tracking_service.client: 🧪 View experiment at: http://127.0.0.1:5000/#/experiments/276980095504201702.\n"
+      "2024/09/09 19:48:48 INFO mlflow.tracking._tracking_service.client: 🏃 View run random_forest_run_50_4 at: http://127.0.0.1:5000/#/experiments/276980095504201702/runs/bb96f195d0614d05821bf84d47216773.\n",
+      "2024/09/09 19:48:48 INFO mlflow.tracking._tracking_service.client: 🧪 View experiment at: http://127.0.0.1:5000/#/experiments/276980095504201702.\n"
      ]
     },
     {
@@ -932,8 +932,8 @@
       "  warnings.warn(\n",
       "c:\\Users\\alban\\OneDrive\\Documents\\MLolp\\projet-main\\.venv\\Lib\\site-packages\\mlflow\\types\\utils.py:407: UserWarning: Hint: Inferred schema contains integer column(s). Integer columns in Python cannot represent missing values. If your input data contains missing values at inference time, it will be encoded as floats and will cause a schema enforcement error. The best way to avoid this problem is to infer the model schema based on a realistic data sample (training dataset) that includes missing values. Alternatively, you can declare integer columns as doubles (float64) whenever these columns may have missing values. See `Handling Integers With Missing Values <https://www.mlflow.org/docs/latest/models.html#handling-integers-with-missing-values>`_ for more details.\n",
       "  warnings.warn(\n",
-      "2024/09/08 11:27:34 INFO mlflow.tracking._tracking_service.client: 🏃 View run random_forest_run_100_6 at: http://127.0.0.1:5000/#/experiments/276980095504201702/runs/59e10e1497664757b68d66c277e0252b.\n",
-      "2024/09/08 11:27:34 INFO mlflow.tracking._tracking_service.client: 🧪 View experiment at: http://127.0.0.1:5000/#/experiments/276980095504201702.\n"
+      "2024/09/09 19:48:52 INFO mlflow.tracking._tracking_service.client: 🏃 View run random_forest_run_100_6 at: http://127.0.0.1:5000/#/experiments/276980095504201702/runs/22e15b587a834dd18574d0f48e3ec8a5.\n",
+      "2024/09/09 19:48:52 INFO mlflow.tracking._tracking_service.client: 🧪 View experiment at: http://127.0.0.1:5000/#/experiments/276980095504201702.\n"
      ]
     },
     {
@@ -952,8 +952,8 @@
       "  warnings.warn(\n",
       "c:\\Users\\alban\\OneDrive\\Documents\\MLolp\\projet-main\\.venv\\Lib\\site-packages\\mlflow\\types\\utils.py:407: UserWarning: Hint: Inferred schema contains integer column(s). Integer columns in Python cannot represent missing values. If your input data contains missing values at inference time, it will be encoded as floats and will cause a schema enforcement error. The best way to avoid this problem is to infer the model schema based on a realistic data sample (training dataset) that includes missing values. Alternatively, you can declare integer columns as doubles (float64) whenever these columns may have missing values. See `Handling Integers With Missing Values <https://www.mlflow.org/docs/latest/models.html#handling-integers-with-missing-values>`_ for more details.\n",
       "  warnings.warn(\n",
-      "2024/09/08 11:27:37 INFO mlflow.tracking._tracking_service.client: 🏃 View run random_forest_run_200_8 at: http://127.0.0.1:5000/#/experiments/276980095504201702/runs/5c9154598590432f8fddc5ef94f357dc.\n",
-      "2024/09/08 11:27:37 INFO mlflow.tracking._tracking_service.client: 🧪 View experiment at: http://127.0.0.1:5000/#/experiments/276980095504201702.\n"
+      "2024/09/09 19:48:58 INFO mlflow.tracking._tracking_service.client: 🏃 View run random_forest_run_200_8 at: http://127.0.0.1:5000/#/experiments/276980095504201702/runs/47036106a5b84008aaf0ffbfe5277314.\n",
+      "2024/09/09 19:48:58 INFO mlflow.tracking._tracking_service.client: 🧪 View experiment at: http://127.0.0.1:5000/#/experiments/276980095504201702.\n"
      ]
     },
     {
@@ -972,8 +972,8 @@
       "  warnings.warn(\n",
       "c:\\Users\\alban\\OneDrive\\Documents\\MLolp\\projet-main\\.venv\\Lib\\site-packages\\mlflow\\types\\utils.py:407: UserWarning: Hint: Inferred schema contains integer column(s). Integer columns in Python cannot represent missing values. If your input data contains missing values at inference time, it will be encoded as floats and will cause a schema enforcement error. The best way to avoid this problem is to infer the model schema based on a realistic data sample (training dataset) that includes missing values. Alternatively, you can declare integer columns as doubles (float64) whenever these columns may have missing values. See `Handling Integers With Missing Values <https://www.mlflow.org/docs/latest/models.html#handling-integers-with-missing-values>`_ for more details.\n",
       "  warnings.warn(\n",
-      "2024/09/08 11:27:40 INFO mlflow.tracking._tracking_service.client: 🏃 View run random_forest_run_100_None at: http://127.0.0.1:5000/#/experiments/276980095504201702/runs/af454d45f1bb44f782714035c0f595d8.\n",
-      "2024/09/08 11:27:40 INFO mlflow.tracking._tracking_service.client: 🧪 View experiment at: http://127.0.0.1:5000/#/experiments/276980095504201702.\n"
+      "2024/09/09 19:49:02 INFO mlflow.tracking._tracking_service.client: 🏃 View run random_forest_run_100_None at: http://127.0.0.1:5000/#/experiments/276980095504201702/runs/1f4cbccfd44d4220bf76885170189733.\n",
+      "2024/09/09 19:49:02 INFO mlflow.tracking._tracking_service.client: 🧪 View experiment at: http://127.0.0.1:5000/#/experiments/276980095504201702.\n"
      ]
     },
     {
@@ -992,8 +992,8 @@
       "  warnings.warn(\n",
       "c:\\Users\\alban\\OneDrive\\Documents\\MLolp\\projet-main\\.venv\\Lib\\site-packages\\mlflow\\types\\utils.py:407: UserWarning: Hint: Inferred schema contains integer column(s). Integer columns in Python cannot represent missing values. If your input data contains missing values at inference time, it will be encoded as floats and will cause a schema enforcement error. The best way to avoid this problem is to infer the model schema based on a realistic data sample (training dataset) that includes missing values. Alternatively, you can declare integer columns as doubles (float64) whenever these columns may have missing values. See `Handling Integers With Missing Values <https://www.mlflow.org/docs/latest/models.html#handling-integers-with-missing-values>`_ for more details.\n",
       "  warnings.warn(\n",
-      "2024/09/08 11:27:43 INFO mlflow.tracking._tracking_service.client: 🏃 View run random_forest_run_150_10 at: http://127.0.0.1:5000/#/experiments/276980095504201702/runs/aa42fcd8a960450495394ea589b0536a.\n",
-      "2024/09/08 11:27:43 INFO mlflow.tracking._tracking_service.client: 🧪 View experiment at: http://127.0.0.1:5000/#/experiments/276980095504201702.\n"
+      "2024/09/09 19:49:07 INFO mlflow.tracking._tracking_service.client: 🏃 View run random_forest_run_150_10 at: http://127.0.0.1:5000/#/experiments/276980095504201702/runs/d855a95f284f469ba9c0e83ab1f25595.\n",
+      "2024/09/09 19:49:07 INFO mlflow.tracking._tracking_service.client: 🧪 View experiment at: http://127.0.0.1:5000/#/experiments/276980095504201702.\n"
      ]
     },
     {
@@ -1012,8 +1012,8 @@
       "  warnings.warn(\n",
       "c:\\Users\\alban\\OneDrive\\Documents\\MLolp\\projet-main\\.venv\\Lib\\site-packages\\mlflow\\types\\utils.py:407: UserWarning: Hint: Inferred schema contains integer column(s). Integer columns in Python cannot represent missing values. If your input data contains missing values at inference time, it will be encoded as floats and will cause a schema enforcement error. The best way to avoid this problem is to infer the model schema based on a realistic data sample (training dataset) that includes missing values. Alternatively, you can declare integer columns as doubles (float64) whenever these columns may have missing values. See `Handling Integers With Missing Values <https://www.mlflow.org/docs/latest/models.html#handling-integers-with-missing-values>`_ for more details.\n",
       "  warnings.warn(\n",
-      "2024/09/08 11:27:46 INFO mlflow.tracking._tracking_service.client: 🏃 View run random_forest_run_200_None at: http://127.0.0.1:5000/#/experiments/276980095504201702/runs/c943fb900a42473c89d60cde69e6b326.\n",
-      "2024/09/08 11:27:46 INFO mlflow.tracking._tracking_service.client: 🧪 View experiment at: http://127.0.0.1:5000/#/experiments/276980095504201702.\n"
+      "2024/09/09 19:49:12 INFO mlflow.tracking._tracking_service.client: 🏃 View run random_forest_run_200_None at: http://127.0.0.1:5000/#/experiments/276980095504201702/runs/5276061ed00844cca2934f2ba189bac7.\n",
+      "2024/09/09 19:49:12 INFO mlflow.tracking._tracking_service.client: 🧪 View experiment at: http://127.0.0.1:5000/#/experiments/276980095504201702.\n"
      ]
     },
     {
@@ -1093,7 +1093,7 @@
     "\n",
     "# Enregistrer le dernier modèle (considéré comme le meilleur modèle) au format pickle\n",
     "if best_rf_model is not None:\n",
-    "    with open(\"random_forest_model2pkl\", \"wb\") as f:\n",
+    "    with open(\"random_forest_model2.pkl\", \"wb\") as f:\n",
     "        pickle.dump(best_rf_model, f)"
    ]
   },
@@ -1197,7 +1197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1208,15 +1208,15 @@
       "  warnings.warn(\n",
       "c:\\Users\\alban\\OneDrive\\Documents\\MLolp\\projet-main\\.venv\\Lib\\site-packages\\mlflow\\types\\utils.py:407: UserWarning: Hint: Inferred schema contains integer column(s). Integer columns in Python cannot represent missing values. If your input data contains missing values at inference time, it will be encoded as floats and will cause a schema enforcement error. The best way to avoid this problem is to infer the model schema based on a realistic data sample (training dataset) that includes missing values. Alternatively, you can declare integer columns as doubles (float64) whenever these columns may have missing values. See `Handling Integers With Missing Values <https://www.mlflow.org/docs/latest/models.html#handling-integers-with-missing-values>`_ for more details.\n",
       "  warnings.warn(\n",
-      "2024/09/08 11:43:44 INFO mlflow.tracking._tracking_service.client: 🏃 View run logistic_regression_run_1.0 at: http://127.0.0.1:5000/#/experiments/286315274138648484/runs/133483d3214746fbb16a0d31f8f85a7e.\n",
-      "2024/09/08 11:43:44 INFO mlflow.tracking._tracking_service.client: 🧪 View experiment at: http://127.0.0.1:5000/#/experiments/286315274138648484.\n"
+      "2024/09/08 11:45:20 INFO mlflow.tracking._tracking_service.client: 🏃 View run logistic_regression_run_2.0 at: http://127.0.0.1:5000/#/experiments/286315274138648484/runs/32defbce621d43829249333510195f16.\n",
+      "2024/09/08 11:45:20 INFO mlflow.tracking._tracking_service.client: 🧪 View experiment at: http://127.0.0.1:5000/#/experiments/286315274138648484.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Run completed with parameters: {'C': 1.0, 'solver': 'liblinear', 'random_state': 42, 'class_weight': 'balanced'}\n",
+      "Run completed with parameters: {'C': 2.0, 'solver': 'liblinear', 'random_state': 42, 'class_weight': 'balanced'}\n",
       "Accuracy: 0.9790, F1-Score: 0.9420, Precision: 0.9069, Recall: 0.9799\n"
      ]
     }
@@ -1242,7 +1242,7 @@
     "\n",
     "# Définir un ensemble de paramètres pour le modèle LogisticRegression\n",
     "params = {\n",
-    "    \"C\": 1.0,\n",
+    "    \"C\": 2.0,\n",
     "    \"solver\": 'liblinear',\n",
     "    \"random_state\": 42,\n",
     "    \"class_weight\": 'balanced'\n",
